dropmarker fix: weird spacing on plugins page

--- a/about-addons.css
+++ b/about-addons.css
@@ -22,7 +22,7 @@
   #header-utils-btn {
     fill: #ababab !important;
   }
-  dropmarker {
+  .header-button dropmarker {
     padding: 2px !important;
   }
   menuitem[type="checkbox"] > .menu-iconic-left, menuitem[checked="true"] > .menu-iconic-left {
